Hook up launch in JS.

--- a/web/embedded/public/index.html
+++ b/web/embedded/public/index.html
@@ -10,6 +10,7 @@
         <li><a href="session.html">Load session file</a></li>
         <li><a href="rom.html">Load ROM</a></li>
         <li><a href="rom-autodetect.html">Load ROM, autodetect device</a></li>
+        <li><a href="install-and-start.html">Install and start a .prc</a></li>
     </ul>
 
 </body>
