--- a/web/embedded/public/start-by-name.html
+++ b/web/embedded/public/start-by-name.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Install and start a .prc</h1>
+    <h1>Start app by name</h1>
     <canvas></canvas>
     <a href="index.html">...back to index</a>
 
@@ -21,19 +21,11 @@
 
             const rom = await romResponse.arrayBuffer();
 
-            const prcResponse = await fetch('pilotmines.prc');
-            if (!prcResponse.ok) {
-                throw new Error('could not download prc file');
-            }
-
-            const prc = await prcResponse.arrayBuffer();
-
             const emulator = await cloudpilot.createEmulator();
             const canvas = document.getElementsByTagName('canvas')[0];
 
             emulator.loadSession(new Uint8Array(rom));
-            emulator.installDatabase(new Uint8Array(prc));
-            emulator.launchDatabase(new Uint8Array(prc));
+            emulator.launchByName('Calculator');
 
             emulator
                 .setCanvas(canvas)
