Another API change: switch to exceptions for error handling.

--- a/web/embedded/public/start-by-name.html
+++ b/web/embedded/public/start-by-name.html
@@ -30,10 +30,7 @@
                 .setCanvas(canvas)
                 .bindInput(canvas)
                 .resume();
-
-            if (emulator.getError() !== undefined) console.warn(emulator.getError());
-
-        })().catch(e => console.log(e));
+        })().catch(e => console.error(e));
     </script>
 </body>
 
