--- a/web/embedded/public/index.html
+++ b/web/embedded/public/index.html
@@ -11,6 +11,7 @@
         <li><a href="rom.html">Load ROM</a></li>
         <li><a href="rom-autodetect.html">Load ROM, autodetect device</a></li>
         <li><a href="install-and-start.html">Install and start a .prc</a></li>
+        <li><a href="install-and-start-zip.html">Install and start from zip archive</a></li>
         <li><a href="start-by-name.html">Start app by name</a></li>
     </ul>
 
