Start controls demo

--- a/web/embedded/public/index.html
+++ b/web/embedded/public/index.html
@@ -13,6 +13,7 @@
         <li><a href="install-and-start.html">Install and start a .prc</a></li>
         <li><a href="install-and-start-zip.html">Install and start from zip archive</a></li>
         <li><a href="start-by-name.html">Start app by name</a></li>
+        <li><a href="controls.html">Emulator controls</a></li>
     </ul>
 
 </body>
