--- a/web/embedded/public/controls.html
+++ b/web/embedded/public/controls.html
@@ -5,7 +5,8 @@
 
     <style>
         .container {
-            width: 100%;
+            width: 100vw;
+            overflow: hidden;
             height: calc(100vh - 8em);
             margin-bottom: 1em;
 
@@ -13,13 +14,21 @@
             flex-direction: row;
         }
 
-        canvas {
+        #canvas-wrapper {
             flex-grow: 1;
+            max-width: 60em;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
         }
 
         #control-container {
-            flex-grow: none;
-            flex-basis: 40em;
+            flex-grow: 0;
+            flex-shrink: 0;
+            flex-basis: 30em;
+            width: 40em;
             text-align: left;
         }
 
@@ -35,18 +44,28 @@
             min-width: 10em;
             margin: 0.5em;
         }
+
+        #ui-status {
+            display: inline-block;
+            margin-left: 1em;
+        }
     </style>
 </head>
 
 <body>
     <h1>Emulator controls</h1>
     <div class="container">
-        <canvas></canvas>
+        <div id="canvas-wrapper"><canvas></canvas></div>
         <div id="control-container" class="hidden">
-            <button type="button" id="power-button"></button>
-            <button type="button" id="reset-button">Reset</button>
-            <button type="button" id="reset-noext-button">Reset noext</button>
-            <button type="button" id="reset-hard-button">Reset hard</button>
+            <div><button type="button" id="power-button"></button><span id="ui-status"></span></div>
+            <div>
+                <button type="button" id="reset-button">Reset</button>
+                <button type="button" id="reset-noext-button">Reset noext</button>
+                <button type="button" id="reset-hard-button">Reset hard</button>
+            </div>
+            <dvi>
+                <button type="button" id="orientation-button"></button>
+            </dvi>
         </div>
     </div>
 
@@ -54,6 +73,38 @@
 
     <script>
         (async function () {
+            function orientationToString(orientation) {
+                switch (orientation) {
+                    case cloudpilot.DeviceOrientation.portrait:
+                        return '0°';
+
+                    case cloudpilot.DeviceOrientation.landscape90:
+                        return '90°';
+
+                    case cloudpilot.DeviceOrientation.landscape270:
+                        return '270°';
+
+                    case cloudpilot.DeviceOrientation.portrait180:
+                        return '180°';
+                }
+            }
+
+            function nextOrientation(orientation) {
+                switch (orientation) {
+                    case cloudpilot.DeviceOrientation.portrait:
+                        return cloudpilot.DeviceOrientation.landscape90;
+
+                    case cloudpilot.DeviceOrientation.landscape90:
+                        return cloudpilot.DeviceOrientation.portrait180;
+
+                    case cloudpilot.DeviceOrientation.landscape270:
+                        return cloudpilot.DeviceOrientation.portrait;
+
+                    case cloudpilot.DeviceOrientation.portrait180:
+                        return cloudpilot.DeviceOrientation.landscape270;
+                }
+            }
+
             const imageResponse = await fetch('session.img');
             if (!imageResponse.ok) {
                 throw new Error('could not download session image');
@@ -68,6 +119,8 @@
             const resetNoextButton = document.getElementById('reset-noext-button');
             const resetHardButton = document.getElementById('reset-hard-button');
             const controlContainer = document.getElementById('control-container');
+            const orientationButton = document.getElementById('orientation-button');
+            const uiStatusContainer = document.getElementById('ui-status');
 
             emulator.
                 loadSession(new Uint8Array(image))
@@ -77,6 +130,8 @@
 
             function updateUi() {
                 powerButton.innerText = emulator.isPowerOff() ? 'Power on' : 'Power off';
+                uiStatusContainer.innerText = emulator.isUiInitialized() ? 'UI initialized' : 'UI not initialized';
+                orientationButton.innerText = 'Rotate to ' + orientationToString(nextOrientation(emulator.getOrientation()));
             }
 
             emulator.powerOffChangeEvent.addHandler(updateUi);
@@ -91,6 +146,10 @@
             resetButton.addEventListener('click', () => emulator.reset());
             resetNoextButton.addEventListener('click', () => emulator.resetNoExtensions());
             resetHardButton.addEventListener('click', () => emulator.resetHard());
+            orientationButton.addEventListener('click', () => {
+                emulator.setOrientation(nextOrientation(emulator.getOrientation()));
+                updateUi();
+            });
         })().catch(e => console.error(e));
     </script>
 </body>
