--- a/web/embedded/public/index.html
+++ b/web/embedded/public/index.html
@@ -14,6 +14,7 @@
         <li><a href="install-and-start-zip.html">Install and start from zip archive</a></li>
         <li><a href="start-by-name.html">Start app by name</a></li>
         <li><a href="controls.html">Emulator controls</a></li>
+        <li><a href="switch-session.html">Switch sessions</a></li>
     </ul>
 
 </body>
