Add links to source.

--- a/web/embedded/public/controls.html
+++ b/web/embedded/public/controls.html
@@ -69,6 +69,10 @@
             margin-top: 0.5em;
         }
 
+        a {
+            margin: 0 0.5em;
+        }
+
     </style>
 </head>
 
@@ -118,6 +122,10 @@
     </div>
 
     <a href="index.html">...back to index</a>
+    |
+    <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/controls.html">
+        source on github
+    </a>
 
     <script>
         (async function () {
