--- a/web/embedded/public/install-and-start-zip.html
+++ b/web/embedded/public/install-and-start-zip.html
@@ -11,6 +11,11 @@
     <h1>Install and start from zip archive</h1>
     <canvas></canvas>
     <a href="index.html">...back to index</a>
+    |
+    <a
+        href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/install-and-start-zip.html">
+        source on github
+    </a>
 
     <script>
         (async function () {
