--- a/web/embedded/public/install-and-start.html
+++ b/web/embedded/public/install-and-start.html
@@ -11,6 +11,10 @@
     <h1>Install and start a .prc</h1>
     <canvas></canvas>
     <a href="index.html">...back to index</a>
+    |
+    <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/install-and-start.html">
+        source on github
+    </a>
 
     <script>
         (async function () {
