--- a/web/embedded/public/rom-autodetect.html
+++ b/web/embedded/public/rom-autodetect.html
@@ -9,7 +9,10 @@
     <h1>Load ROM, autodetect device</h1>
     <canvas></canvas>
     <a href="index.html">...back to index</a>
-
+    |
+    <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/rom-autodetect.html">
+        source on github
+    </a>
     <script>
         (async function () {
             const romResponse = await fetch('palmv.rom');
