--- a/web/embedded/public/rom.html
+++ b/web/embedded/public/rom.html
@@ -8,8 +8,11 @@
 <body>
     <h1>Load ROM</h1>
     <canvas></canvas>
-    <a href="index.html">...back to index</a>
-
+    <a href="index.html">back to index</a>
+    |
+    <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/rom.html">
+        source on github
+    </a>
     <script>
         (async function () {
             const romResponse = await fetch('palmv.rom');
