--- a/web/embedded/public/session.html
+++ b/web/embedded/public/session.html
@@ -9,6 +9,10 @@
     <h1>Load session file</h1>
     <canvas></canvas>
     <a href="index.html">...back to index</a>
+    |
+    <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/session.html">
+        source on github
+    </a>
 
     <script>
         (async function () {
