--- a/web/embedded/public/switch-session.html
+++ b/web/embedded/public/switch-session.html
@@ -48,6 +48,10 @@
             margin-left: 0;
         }
 
+        a {
+            margin: 0 0.5em;
+        }
+
     </style>
 </head>
 
@@ -63,6 +67,10 @@
     </div>
 
     <a href="index.html">...back to index</a>
+    |
+    <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/switch-session.html">
+        source on github
+    </a>
 
     <script>
         (async function () {
