--- a/web/embedded/public/two-instances.html
+++ b/web/embedded/public/two-instances.html
@@ -49,6 +49,10 @@
             outline: none;
         }
 
+        a {
+            margin: 0 0.5em;
+        }
+
     </style>
 </head>
 
@@ -59,6 +63,10 @@
         <div class="canvas-wrapper"><canvas id="canvas-2" tabindex="-1"></canvas></div>
     </div>
     <a href="index.html">...back to index</a>
+    |
+    <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/two-instances.html">
+        source on github
+    </a>
 
     <script>
         (async function () {
