--- a/web/embedded/public/start-by-name.html
+++ b/web/embedded/public/start-by-name.html
@@ -11,6 +11,10 @@
     <h1>Start app by name</h1>
     <canvas></canvas>
     <a href="index.html">...back to index</a>
+    |
+    <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/start-by-name.html">
+        source on github
+    </a>
 
     <script>
         (async function () {
